# HRFrappeHub

./: .env.example  .replit  Dockerfile  MIGRATION_PLAN.md  README.md  app.py  app_frappe.py  docker-compose.yml  docker-entrypoint.sh  fixed_app.py  frappe_compat.py  frappe_init.py  frappe_usage_example.py  hooks.py  migrate_db.py  pyproject.toml
attached_assets/: Pasted--Best-Practices-for-Frappe-ERPNext-App-Development-1-Clean-Code-Principles-Follow-PEP8-Frappe-i-1745752662259.txt
frappe-bench/env/: pyvenv.cfg
hrms/: __init__.py  api.py  hooks.py  hrms_controller.py  notifications.py
hrms/config/: desktop.py  hr.py
hrms/hr/: __init__.py
hrms/hr/doctype/attendance/: attendance.js  attendance.json  attendance.py
hrms/payroll/: __init__.py
hrms/payroll/doctype/: __init__.py
hrms/public/js/: hrms.js
hrms/recruitment/: __init__.py
hrms/recruitment/doctype/: __init__.py
hrms/www/: employee_portal.html  employee_portal.py  hr_dashboard.html  hr_dashboard.py  login.html
hrms/www/templates/: web.html
instance/: hrms.db
mariadb-init/: 01-create-database.sql
templates/: apply_leave.html  employee_portal.html  hr_dashboard.html  login.html  mark_attendance.html  my_profile.html  salary_slip_detail.html  view_attendance.html  view_leaves.html  view_salary_slips.html
templates/includes/: job_opening_row.html
templates/modern/: base.html  employee_portal.html  employees.html  hr_dashboard.html  login.html  message_detail.html  messages.html  notification_detail.html  notifications.html  settings.html
templates/pages/: job_application.html  jobs.html
(+25 files in other folders)
